# tin-nfs

./: .gitignore  LICENSE  README.md
kamil/: CMakeLists.txt  auth.cpp  auth.h  config  error.h  main.cpp  open.cpp  open.h  operation.cpp  operation.h  proto.cpp  proto.h
kamil/common/: singleton.h
kamil/user/: user.cpp  user.h
klient/: CMakeLists.txt  auth.cpp  auth.h  auth_msg.cpp  auth_msg.h  main.cpp  open.cpp  open.h  open_msg.cpp  open_msg.h  operation.cpp  operation.h  operation_msg.cpp  operation_msg.h  proto.h  send_sock_msg.cpp  send_sock_msg.h
server/: CMakeLists.txt  auth.cpp  auth.h  config.txt  main.cpp  open.cpp  open.h  operation.cpp  operation.h  proto.cpp  proto.h
server/common/: singleton.h
server/dirp/: dirp_holder.cpp  dirp_holder.h
server/open_handlers/: open_msg_handler.cpp  open_msg_handler.h
server/operation_handlers/: operation_msg_handler.cpp  operation_msg_handler.h
server/user/: user.cpp  user.h
